corrección gmaps barraNcas

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </address>
 
         <div class="mt-8">
-            <a href="https://maps.app.goo.gl/t45ku87j53s2WBur8" 
+            <a href="https://maps.app.goo.gl/b8HT4D3n8Q8k7kGL8" 
             target="_blank" 
             class="inline-block px-8 py-3 bg-pink-400 text-white font-bold rounded-lg shadow-lg hover:bg-pink-700 transition duration-300 ease-in-out">
                 Ver en Google Maps
@@ -128,7 +128,7 @@
                 CLUB HOUSE
             </p>
             <p>
-                Barrio Barracas de San José
+                Barrio Barrancas de San José
             </p>
         </address>
 
