Actualizar index.html
nuevo alias

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </address>
 
             <div class="mt-6 badge-accent">alias:</div>
-            <div class="text-xl badge badge-neutral p-6 rounded-2xl">marcela.ebert.mp</div>
+            <div class="text-xl badge badge-neutral p-6 rounded-2xl">marcela.ebert</div>
 
 
     </section>
